--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-fasthtml==0.4.4
-sqlite_minutils==4.0.3
-uvicorn==0.30.1
-yt-dlp==2025.10.22
+yt-dlp==2024.7.16
 moviepy==2.2.1
+uvicorn==0.30.1
+sqlite-minutils==4.0.3
